# dns-rewriter

./: Cargo.toml  README.md
src/: main.rs
