[package]
name = "dns-rewriter"
version = "0.1.0"
authors = ["adamczi <adamczi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfqueue = "*"
pnet = "0.27.2"
libc = "*"
structopt = { version = "0.3", default-features = false }
iptables = "0.4"